--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
             <div class="personal__logo">Cameron Warburton</div>
             <ul class="nav__link--list">
                 <li>
-                    <a href=""></a>
+                    <a href="" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Language</a>
+                </li>
+                <li>
+                    <a href="" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Project</a>
+                </li>
+                <li>
+                    <a href="" class="
+                    nav__link--anchor
+                    nav__link--anchor-primary
+                    ">Contact</a>
                 </li>
             </ul>
         </nav>
