--- a/index.html
+++ b/index.html
@@ -47,19 +47,22 @@
             </p>
             <div class="about-me__links">
                 <a href="" class="about-me__link">
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fab fa-linkedin"></i>
                 </a>
                 <a href="" class="about-me__link">
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fab fa-github"></i>
                 </a>
                 <a href="" class="about-me__link">
-                    <i class="fa-brands fa-envelope"></i>
+                    <i class="far fa-envelope"></i>
                 </a>
                 <a href="" class="about-me__link">
-                    <i class="fa-brands fa-file-pdf"></i>
+                    <i class="fas fa-file-pdf"></i>
                 </a>
             </div>
           </div>
+          <figure class="about-me__img--container">
+            <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+          </figure>
         </div>
       </div>
     </section>
