--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cameron Warburton</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="about-me">
@@ -16,17 +19,20 @@
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Language</a>
+              >Language</a
+            >
           </li>
           <li>
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Project</a>
+              >Project</a
+            >
           </li>
           <li>
             <a href="" class="nav__link--anchor nav__link--anchor-primary"
-              >Contact</a>
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
@@ -34,94 +40,245 @@
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-              <img src="./assets/me.jpeg" class="about-me__picture" alt="Picture of me" />
+              <img
+                src="./assets/me.jpeg"
+                class="about-me__picture"
+                alt="Picture of me"
+              />
             </figure>
             <h1 class="about-me__info--title">
               Hey! I'm <span class="text--purple">Cameron Warburton</span> 👋
             </h1>
             <p class="about-me__info--para">
-              I'm a passionate <strong class="text--purple">frontend software engineer</strong> dedicated to crafting
-              seamless user experiences through a blend of coding expertise and
-              design sensibility. Committed to staying current with technology
-              trends to contribute to impactful digital solutions.
+              I'm a passionate
+              <strong class="text--purple">frontend software engineer</strong>
+              dedicated to crafting seamless user experiences through a blend of
+              coding expertise and design sensibility. Committed to staying
+              current with technology trends to contribute to impactful digital
+              solutions.
             </p>
             <div class="about-me__links">
-                <a href="" class="about-me__link">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fab fa-github"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="far fa-envelope"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fas fa-file-pdf"></i>
-                </a>
+              <a href="" class="about-me__link">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="far fa-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fas fa-file-pdf"></i>
+              </a>
             </div>
           </div>
           <figure class="about-me__img--container">
-            <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+            <img
+              src="./assets/undraw_websites.svg"
+              class="about-me__img"
+              alt=""
+            />
           </figure>
         </div>
       </div>
     </section>
-    <section id="languages"></section>
-    <div class="container">
-      <div class="row">
-        <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
-        <div class="language__list">
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="HTML Logo" class="language__img">
-            </figure>
-            <span class="language__name">HTML</span>
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt="HTML Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="" class="language__img">
-            </figure>
-            <span class="language__name">CSS</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt=""
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="JavaScript Logo" class="language__img">
-            </figure>
-            <span class="language__name">JavaScript</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt="JavaScript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png" alt="TypeScript Logo" class="language__img">
-            </figure>
-            <span class="language__name">TypeScript</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/typescript-3521774-2945272.png"
+                  alt="TypeScript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">TypeScript</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png" alt="Vue Logo" class="language__img">
-            </figure>
-            <span class="language__name">Vue</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/vue-282497.png"
+                  alt="Vue Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Vue</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png" alt="Nuxt Logo" class="language__img">
-            </figure>
-            <span class="language__name">Nuxt</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/nuxt-dot-js-3628959-3030184.png"
+                  alt="Nuxt Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">Nuxt</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" alt="React Logo" class="language__img">
-            </figure>
-            <span class="language__name">React Logo</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt="React Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">React Logo</span>
             </div>
-          <div class="language">
-            <figure class="language__img--wrapper">
-              <img src="https://mobx.js.org/img/mobx.png" alt="MobX Logo" class="language__img">
-            </figure>
-            <span class="language__name">MobX</span>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://mobx.js.org/img/mobx.png"
+                  alt="MobX Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">MobX</span>
             </div>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car subscription project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Esse ipsa laudantium minima voluptatem nemo, aut quas
+                    accusantium earum deserunt veniam consectetur at non et
+                    ducimus quo vitae dolor, excepturi laboriosam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.yourwebsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car subscription project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Esse ipsa laudantium minima voluptatem nemo, aut quas
+                    accusantium earum deserunt veniam consectetur at non et
+                    ducimus quo vitae dolor, excepturi laboriosam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.yourwebsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Car subscription project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Esse ipsa laudantium minima voluptatem nemo, aut quas
+                    accusantium earum deserunt veniam consectetur at non et
+                    ducimus quo vitae dolor, excepturi laboriosam.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.yourwebsite.com" target="_blank" class="project__description--link">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="row">
+        <a href="#">
+          <figure>
+            <img src="./assets/logo.jpg" alt="">
+          </figure>
+        </a>
+      </div>
+    </footer>
   </body>
-
 </html>
