--- a/index.html
+++ b/index.html
@@ -272,13 +272,36 @@
       </div>
     </section>
     <footer>
-      <div class="row">
+      <div class="row footer__row">
         <a href="#">
           <figure>
-            <img src="./assets/logo.jpg" alt="">
+            <img src="./assets/logo.png" class="footer__logo--img" alt="">
           </figure>
         </a>
+        <div class="footer__social--list">
+          <a href="https://github.com/CameronWarburton" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/cameronwarburton/" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">LinkedIn</a>
+          <a href="mailto:cameron.cw@outlook.com" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">Email</a>
+          <a href="./assets/CAMERON J WARBURTON CV.pdf" class="
+          footer__social--link
+          link__hover-effect
+          link__hover-effect--white
+          " target="_blank">Resume</a>
+        </div>
       </div>
     </footer>
+    <div class="footer__copyright">Copyright © 2023 Cameron Warburton</div>
   </body>
 </html>
