--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
       <nav>
         <div class="personal__logo">Cameron Warburton</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#languages"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Language</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Project</a
+              >Projects</a
             >
           </li>
-          <li>
-            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+          <li class="nav__link">
+            <a href="mailto:cameron.cw@outlook.com" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
           </li>
@@ -47,7 +47,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Cameron Warburton</span> 👋
+              Hey! I'm <span class="text--purple">Cameron Warburton</span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               I'm a passionate
@@ -58,16 +58,16 @@
               solutions.
             </p>
             <div class="about-me__links">
-              <a href="" class="about-me__link">
+              <a href="https://www.linkedin.com/in/cameronwarburton/" class="about-me__link">
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="https://github.com/CameronWarburton" class="about-me__link">
                 <i class="fab fa-github"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="mailto:cameron.cw@outlook.com" class="about-me__link">
                 <i class="far fa-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="./assets/CAMERON J WARBURTON CV.pdf" target="_blank" class="about-me__link">
                 <i class="fas fa-file-pdf"></i>
               </a>
             </div>
@@ -273,10 +273,14 @@
     </section>
     <footer>
       <div class="row footer__row">
-        <a href="#">
-          <figure>
+        <a href="#" class="footer__achor">
+          <figure class="footer__logo">
             <img src="./assets/logo.png" class="footer__logo--img" alt="">
           </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
         </a>
         <div class="footer__social--list">
           <a href="https://github.com/CameronWarburton" class="
@@ -300,8 +304,8 @@
           link__hover-effect--white
           " target="_blank">Resume</a>
         </div>
+        <div class="footer__copyright">Copyright © 2023 Cameron Warburton</div>
       </div>
     </footer>
-    <div class="footer__copyright">Copyright © 2023 Cameron Warburton</div>
   </body>
 </html>
